elementu onak sartzen

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             <div class="col-4">
                                 <div class="b--card-a">
                                     <div class="b--card-a__hd">
-                                        <img class="b--card-a__hd__media" src="./img/placeholder/icon-1.png" alt="">
+                                        <img class="b--card-a__hd__media" src="./img/simbolo-1.png" alt="">
                                         <h4 class="b--card-a__hd__title">PLANIFICACIÓN Y ESCALA DE LA INVERSIÓN</h4>
                                     </div>
                                     <div class="b--card-a__bd">
@@ -122,7 +122,7 @@
                             <div class="col-4">
                                 <div class="b--card-a">
                                     <div class="b--card-a__hd">
-                                        <img class="b--card-a__hd__media" src="./img/placeholder/icon-2.png" alt="">
+                                        <img class="b--card-a__hd__media" src="./img/simbolo-2.png" alt="">
                                         <h4 class="b--card-a__hd__title">ADECUACIÓN A LA NORMATIVA VIGENTE</h4>
                                     </div>
                                     <div class="b--card-a__bd">
@@ -133,7 +133,7 @@
                             <div class="col-4">
                                 <div class="b--card-a">
                                     <div class="b--card-a__hd">
-                                        <img class="b--card-a__hd__media" src="./img/placeholder/icon-3.png" alt="">
+                                        <img class="b--card-a__hd__media" src="./img/simbolo-3.png" alt="">
                                         <h4 class="b--card-a__hd__title">MANTENIBILIDAD Y USABILIDAD DEL TRANSELEVADOR</h4>
                                     </div>
                                     <div class="b--card-a__bd">
@@ -148,7 +148,7 @@
                             <div class="col-4">
                                 <div class="b--card-a">
                                     <div class="b--card-a__hd">
-                                        <img class="b--card-a__hd__media" src="./img/placeholder/icon-4.png" alt="">
+                                        <img class="b--card-a__hd__media" src="./img/simbolo-4.png" alt="">
                                         <h4 class="b--card-a__hd__title">ROBUSTEZ Y CALIDAD GARANTIZADA</h4>
                                     </div>
                                     <div class="b--card-a__bd">
@@ -159,7 +159,7 @@
                             <div class="col-4">
                                 <div class="b--card-a">
                                     <div class="b--card-a__hd">
-                                        <img class="b--card-a__hd__media" src="./img/placeholder/icon-5.png" alt="">
+                                        <img class="b--card-a__hd__media" src="./img/simbolo-5.png" alt="">
                                         <h4 class="b--card-a__hd__title">FLEXIBILIDAD E INTEGRACIÓN</h4>
                                     </div>
                                     <div class="b--card-a__bd">
@@ -172,11 +172,14 @@
                 </div>
             </div>
         </section>
-        <section class="b--cta-a">
+        <section >
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="f--font-c f--color-b">Soluciones de <strong>ingeniería intralogística</strong> para cada sector</h3> 
+                        <a class="b--cta-a" href="https://www.ulmahandling.com/es/servicios" target="_blank">
+                            <h3 class="b--cta-a__text">Soluciones de <strong>ingeniería<br>intralogística</strong> para cada sector</h3> 
+                            <img class="b--cta-a__media" src="./img/arrow.png" alt="">
+                        </a>
                     </div>
                 </div>
             </div>
