--- a/index.html
+++ b/index.html
@@ -45,14 +45,12 @@
         </div>
     </header>   
     <main>
-        <section>
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <img src="./img/placeholder/hero.png" alt="">
-                    </div>
-                </div>
-            </div>
+        <section class="b--hero-a">
+            <video class="b--hero-a__media" width="100%" height="100%" controls loop poster="./img/hero-poster.png">
+                <source src="./img/hero-video.mp4" type="video/mp4">
+                <source src="./img/hero-video.ogg" type="video/ogg">
+                Your browser does not support the video tag.
+            </video>
         </section>
         <section>
             <div class="container">
