--- a/es.html
+++ b/es.html
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                     <div class="col-lg-5 offset-lg-1  col-12 offset-0">
-                        <h2 class="f--font-c">CON EL PLAN RENOVE DE ULMA, TÚ GANAS</h2>
+                        <h2 class="f--font-c f--color-b">CON EL PLAN RENOVE DE ULMA, <strong>TÚ GANAS</strong></h2> 
                         <ul class="b--list-a">
                             <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt="">Evita riesgos derivados de la obsolescencia tecnológica </li> 
                             <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt="">Pon al día tus conocimientos sobre instralogística avanzada</li> 
