--- a/index.html
+++ b/index.html
@@ -11,33 +11,44 @@
     <link rel="alternate" hreflang="eu" href="http://www.arizmendi.eus/guikastola">
     <link rel="alternate" hreflang="es-es" href="http://www.arizmendi.eus/guikastola/es.html">
     <link rel="stylesheet" href="./sass/style.css">
+    <link rel="stylesheet" href="./sass/login.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap" rel="stylesheet">
 <body>
-    <header>
+    <header class="b--login-header-a">
         <div class="container">
             <div class="row">
-                <div class="col-12">
-                    <img src="./img/logo-ulma.png" alt="">
+                <div class="col-lg-4 offset-lg-4">
+                    <img class="b--login-header-a__media" src="./img/logo-ulma.png" alt="">
                 </div>
             </div>
         </div>
     </header>
     <main>
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <form action="">
-                        <input class="input" type="text" id="username" placeholder="Username">
-                        <input class="input" type="password" id="password" placeholder="Password">
-                        <button class="btn" type="button" onclick="getInfo()">Enter</button>
-                    </form>
+        <section class="f--section-a">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 offset-lg-4">
+                        <form action="" class="b--form-a">
+                            <fieldset class="b--form-a__field">
+                                <legend class="b--form-a__field__label">Nombre de usuario</legend>
+                                <input class="b--form-a__field__input" type="text" id="username">
+                            </fieldset>
+                            <fieldset class="b--form-a__field">
+                                <legend class="b--form-a__field__label">Contraseña</legend>
+                                <input class="b--form-a__field__input" type="password" id="password">
+                            </fieldset>
+                            <fieldset class="b--form-a__btn-wrapper">
+                                <button class="b--form-a__btn-wrapper__btn" type="button" onclick="getInfo()">Iniciar sesión</button>
+                            </fieldset>
+                        </form>
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
     </main>
     
 </body>
