login ingles + bideo fondo

--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
                     <div class="col-lg-4 offset-lg-4">
                         <form action="" class="b--form-a">
                             <fieldset class="b--form-a__field">
-                                <legend class="b--form-a__field__label">Nombre de usuario</legend>
+                                <legend class="b--form-a__field__label">Username</legend>
                                 <input class="b--form-a__field__input" type="text" id="username">
                             </fieldset>
                             <fieldset class="b--form-a__field">
-                                <legend class="b--form-a__field__label">Contraseña</legend>
+                                <legend class="b--form-a__field__label">Password</legend>
                                 <input class="b--form-a__field__input" type="password" id="password">
                             </fieldset>
                             <fieldset class="b--form-a__btn-wrapper">
-                                <button class="b--form-a__btn-wrapper__btn" type="button" onclick="getInfo()">Iniciar sesión</button>
+                                <button class="b--form-a__btn-wrapper__btn" type="button" onclick="getInfo()">Enter</button>
                             </fieldset>
                         </form>
                     </div>
