--- a/es.html
+++ b/es.html
@@ -95,7 +95,7 @@
                     <div class="col-12">
                         <div class="b--card-c">
                             <p class="b--card-c__text f--font-d text-center">ACERCATE AL <strong>PLAN RENVOVE DE ULMA</strong> A TRAVÉS DE ESTE VIDEO</p> 
-                            <video class="b--card-c__media" width="100%" height="100%" controls loop poster="./img/hero-poster.png">
+                            <video class="b--card-c__media" width="100%" height="100%" controls loop poster="./img/video-poster.png">
                                 <source src="./img/hero-video.mp4" type="video/mp4">
                                 <source src="./img/hero-video.ogg" type="video/ogg">
                                 Your browser does not support the video tag.
