--- a/es.html
+++ b/es.html
@@ -32,7 +32,7 @@
                 <div class="col-lg-4 col-7">
                     <div class="b--header-a__content">
                         <div class="b--header-a__content__lang">
-                            <p class="b--header-a__content__lang__text"><a href="#">ES</a> · <a href="./fr.html">FR</a></p>
+                            <p class="b--header-a__content__lang__text"><a href="#">ES</a> · <a href="./en.html">EN</a> · <a href="./fr.html">FR</a> · <a href="./br.html">BR</a></p>
                         </div>
                         <div class="b--header-a__content__social">
                             <a class="b--header-a__content__social__link" href="https://www.linkedin.com/company/ulma-handling-systems" target="_blank"><img class="b--header-a__content__social__link__icon" src="./img/social/linkedin.png" alt="LinkedIn"></a> 
@@ -47,7 +47,7 @@
     </header>   
     <main>
         <section class="b--hero-a">
-            <video class="b--hero-a__media" width="100%" height="100%" controls loop poster="./img/hero-poster.png">
+            <video class="b--hero-a__media" width="100%" height="100%" autoplay muted loop>
                 <source src="./img/hero-video.mp4" type="video/mp4">
                 <source src="./img/hero-video.ogg" type="video/ogg">
                 Your browser does not support the video tag.
@@ -123,53 +123,41 @@
                     <div class="col-12">
                         <div class="row">
                             <div class="col-lg-4 col-12">
-                                <div class="b--card-a accordion-item">
-                                    <div class="accordion-header" id="headingOne">
-                                        <div class="b--card-a__hd collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                                            <div class="b--card-a__hd__media-wrapper">
-                                                <img class="b--card-a__hd__media-wrapper__media" src="./img/simbolo-1.png" alt="">
-                                            </div>
-                                            <h4 class="b--card-a__hd__title">PLANIFICACIÓN Y ESCALA DE LA INVERSIÓN</h4>
+                                <div class="b--card-a">
+                                    <div class="b--card-a__hd">
+                                        <div class="b--card-a__hd__media-wrapper">
+                                            <img class="b--card-a__hd__media-wrapper__media" src="./img/simbolo-1.png" alt="">
                                         </div>
+                                        <h4 class="b--card-a__hd__title">PLANIFICACIÓN Y ESCALA DE LA INVERSIÓN</h4>
                                     </div>
-                                    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                                        <div class="b--card-a__bd" id="collapseExample">
-                                            <p class="b--card-a__bd__text">Diseñamos un traje a medida acorde a tus necesidades y las de tu instalación.</p>
-                                        </div>
+                                    <div class="b--card-a__bd">
+                                        <p class="b--card-a__bd__text">Diseñamos un traje a medida acorde a tus necesidades y las de tu instalación.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-12">
-                                <div class="b--card-a accordion-item">
-                                    <div class="accordion-header" id="headingTwo">
-                                        <div class="b--card-a__hd collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                            <div class="b--card-a__hd__media-wrapper">
-                                                <img class="b--card-a__hd__media-wrapper__media" src="./img/simbolo-2.png" alt="">
-                                            </div>
-                                            <h4 class="b--card-a__hd__title">ADECUACIÓN A LA NORMATIVA VIGENTE</h4>
+                                <div class="b--card-a">
+                                    <div class="b--card-a__hd">
+                                        <div class="b--card-a__hd__media-wrapper">
+                                            <img class="b--card-a__hd__media-wrapper__media" src="./img/simbolo-2.png" alt="">
                                         </div>
+                                        <h4 class="b--card-a__hd__title">ADECUACIÓN A LA NORMATIVA VIGENTE</h4>
                                     </div>
-                                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                                        <div class="b--card-a__bd" id="collapseExample">
-                                            <p class="b--card-a__bd__text">Todos los dispositivos cumplen con la normativa europea actual de seguridad y eficiencia energética.</p>
-                                        </div>
+                                    <div class="b--card-a__bd">
+                                        <p class="b--card-a__bd__text">Todos los dispositivos cumplen con la normativa europea actual de seguridad y eficiencia energética.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-12">
-                                <div class="b--card-a accordion-item">
-                                    <div class="accordion-header" id="headingThree">
-                                        <div class="b--card-a__hd collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                            <div class="b--card-a__hd__media-wrapper">
-                                                <img class="b--card-a__hd__media-wrapper__media" src="./img/simbolo-3.png" alt="">
-                                            </div>
-                                            <h4 class="b--card-a__hd__title">MANTENIBILIDAD Y USABILIDAD DEL TRANSELEVADOR</h4>
+                                <div class="b--card-a">
+                                    <div class="b--card-a__hd">
+                                        <div class="b--card-a__hd__media-wrapper">
+                                            <img class="b--card-a__hd__media-wrapper__media" src="./img/simbolo-3.png" alt="">
                                         </div>
+                                        <h4 class="b--card-a__hd__title">MANTENIBILIDAD Y USABILIDAD DEL TRANSELEVADOR</h4>
                                     </div>
-                                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                                        <div class="b--card-a__bd" id="collapseExample">
-                                            <p class="b--card-a__bd__text">Esta nueva tecnología te ayuda en el día día y hace que todo sea más sencillo.</p>
-                                        </div>
+                                    <div class="b--card-a__bd">
+                                        <p class="b--card-a__bd__text">Esta nueva tecnología te ayuda en el día día y hace que todo sea más sencillo.</p>
                                     </div>
                                 </div>
                             </div>
@@ -178,36 +166,28 @@
                     <div class="col-12">
                         <div class="row justify-content-center">
                             <div class="col-lg-4 col-12">
-                                <div class="b--card-a accordion-item">
-                                    <div class="accordion-header" id="headingFour">
-                                        <div class="b--card-a__hd collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                            <div class="b--card-a__hd__media-wrapper">
-                                                <img class="b--card-a__hd__media-wrapper__media" src="./img/simbolo-4.png" alt="">
-                                            </div>
-                                            <h4 class="b--card-a__hd__title">ROBUSTEZ Y CALIDAD GARANTIZADA</h4>
+                                <div class="b--card-a">
+                                    <div class="b--card-a__hd">
+                                        <div class="b--card-a__hd__media-wrapper">
+                                            <img class="b--card-a__hd__media-wrapper__media" src="./img/simbolo-4.png" alt="">
                                         </div>
+                                        <h4 class="b--card-a__hd__title">ROBUSTEZ Y CALIDAD GARANTIZADA</h4>
                                     </div>
-                                    <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
-                                        <div class="b--card-a__bd" id="collapseExample">
-                                            <p class="b--card-a__bd__text">Tranquilidad y seguridad para ti y tu instalación. Solo un líder del sector, como DAIFUKU te lo puede proporcionar.</p>
-                                        </div>
+                                    <div class="b--card-a__bd">
+                                        <p class="b--card-a__bd__text">Tranquilidad y seguridad para ti y tu instalación. Solo un líder del sector, como DAIFUKU te lo puede proporcionar.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-12">
                                 <div class="b--card-a">
-                                    <div class="accordion-header" id="headingFive">
-                                        <div class="b--card-a__hd" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                                            <div class="b--card-a__hd__media-wrapper">
-                                                <img class="b--card-a__hd__media-wrapper__media" src="./img/simbolo-5.png" alt="">
-                                            </div>
-                                            <h4 class="b--card-a__hd__title">FLEXIBILIDAD E INTEGRACIÓN</h4>
+                                    <div class="b--card-a__hd">
+                                        <div class="b--card-a__hd__media-wrapper">
+                                            <img class="b--card-a__hd__media-wrapper__media" src="./img/simbolo-5.png" alt="">
                                         </div>
+                                        <h4 class="b--card-a__hd__title">FLEXIBILIDAD E INTEGRACIÓN</h4>
                                     </div>
-                                    <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
-                                        <div class="b--card-a__bd" id="collapseExample">
-                                            <p class="b--card-a__bd__text">Con el Plan Renove tienes más fácil la implementación de las futuras necesidades de tu instalación.</p>
-                                        </div>
+                                    <div class="b--card-a__bd">
+                                        <p class="b--card-a__bd__text">Con el Plan Renove tienes más fácil la implementación de las futuras necesidades de tu instalación.</p>
                                     </div>
                                 </div>
                             </div>
