--- a/fr.html
+++ b/fr.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ulma Handling Plan Renove</title>
+    <title>Ulma Handling Renewal</title>
     <meta name="description" content="Arizmendi ikastola, hezkuntza kooperatiba euskalduna">
     <meta name="keywords" content="arizmendi, ikastola, hezkuntza, kooperatiba, euskalduna, Arrasate, Aretxabaleta, Eskoriatza">
     <link rel="icon" type="image/x-icon" href="./img/fabicon-ulma.png">
@@ -32,7 +32,7 @@
                 <div class="col-lg-4 col-12">
                     <div class="b--header-a__content">
                         <div class="b--header-a__content__lang">
-                            <p class="b--header-a__content__lang__text"><a href="#">ES</a> · <a href="./en.html">EN</a> · <a href="./fr.html">FR</a> · <a href="#">BR</a></p>
+                            <p class="b--header-a__content__lang__text"><a href="./es.html">ES</a> · <a href="./en.html">EN</a> · <a href="#">FR</a> · <a href="#">BR</a></p>
                         </div>
                         <div class="b--header-a__content__social">
                             <a class="b--header-a__content__social__link" href="https://www.linkedin.com/company/ulma-handling-systems" target="_blank"><img class="b--header-a__content__social__link__icon" src="./img/social/linkedin.png" alt="LinkedIn"></a> 
@@ -48,8 +48,8 @@
     <main>
         <section class="b--hero-a">
             <video class="b--hero-a__media" width="100%" height="100%" autoplay muted loop>
-                <source src="./img/ULMA-ES.mp4" type="video/mp4">
-                <source src="./img/ULMA-ES.ogg" type="video/ogg">
+                <source src="./img/ULMA-FR.mp4" type="video/mp4">
+                <source src="./img/ULMA-FR.ogg" type="video/ogg">
                 Your browser does not support the video tag.
             </video>
         </section>
@@ -57,13 +57,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h1 class="f--font-a text-center f--mb-32">EN ULMA SABEMOS QUÉ HACER <br><span class="f--color-b f--bold">PARA QUE NO TE DETENGAS</span></h1>
+                        <h1 class="f--font-a text-center f--mb-32">À ULMA, NOUS SAVONS CE QU'IL FAUT FAIRE <br><span class="f--color-b f--bold">POUR QUE VOUS NE VOUS ARRÊTIEZ PAS</span></h1>
                         
                     </div>
                     <div class="col-lg-8 offset-lg-2  col-12 offset-0 text-center">
-                        <p class="f--font-e f--bold">Miramos alrededor y todo lo que vemos nos recuerda que el mundo no se para. Nuestro reto es que tú tampoco lo hagas.</p> <br>
-                        <p class="f--font-e">El mercado nos pone a prueba continuamente, nos exige responder a plazos cada vez más ajustados y con mayor rapidez y eficacia. Nuestra opción es no quedarnos atrás, mantener el ritmo, no perder el control, avanzar siempre. </p> <br>
-                        <p class="f--font-e"><span class="f--color-b">Con ULMA</span>, empresa experta en soluciones y servicios de intralogística integral, <span class="f--color-b">tienes las herramientas idóneas para lograrlo.</span></p> 
+                        <p class="f--font-e f--bold">Nous regardons autour de nous et tout ce que nous voyons nous rappelle que le monde ne s'arrête pas. Notre défi est que vous ne vous arrêtiez pas non plus.</p> <br>
+                        <p class="f--font-e">Le marché nous met continuellement à l'épreuve, exigeant que nous répondions à des délais de plus en plus courts, avec une rapidité et une efficacité toujours plus grandes. Notre option est de ne pas rester à la traîne, de maintenir le rythme, de ne pas perdre le contrôle, d'aller toujours de l'avant.</p> <br>
+                        <p class="f--font-e"><span class="f--color-b">Avec ULMA</span>, entreprise experte en solutions et services intralogistiques intégrés, <span class="f--color-b">vous disposez des outils idéaux pour y parvenir.</span></p> 
                     </div>
                 </div>
             </div>
@@ -73,17 +73,17 @@
                 <div class="row">
                     <div class="col-lg-6 col-12"> 
                         <div class="b--card-b">
-                            <p>PORQUE EL MUNDO NO SE PARA Y TÚ TAMPOCO, EN ULMA HEMOS DISEÑADO UN SERVICIO EXCLUSIVO QUE TIENE POR <strong>OBJETIVO PROLONGAR LA VIDA ÚTIL DE TU INSTALACIÓN MEDIANTE UN PLAN RENOVE PERSONALIZADO</strong>, QUE GARANTIZA LA RENOVACIÓN PARCIAL O TOTAL DEL TRANSELEVADOR</p>
+                            <p>PARCE QUE LE MONDE NE S'ARRÊTE PAS ET VOUS NON PLUS, ULMA A CONÇU UN SERVICIE EXCLUSIF DONT L'OBJECTIF EST DE <strong>PROLONGER LA DURÉE DE VIE UTILE DE VOTRE INSTALLATION GRÂCE À UN PLAN DE RÉNOVATION PERSONNALISÉ</strong>, QUI GARANTIT LA RÉNOVATION PARTIELLE OU TOTALE DE L'INSTALLATION.</p> 
                         </div>
                     </div>
                     <div class="col-lg-5 offset-lg-1  col-12 offset-0">
-                        <h2 class="f--font-c f--color-b">CON EL PLAN RENOVE DE ULMA, <strong>TÚ GANAS</strong></h2> 
+                        <h2 class="f--font-c f--color-b">GRÂCE AU RENEWAL PLAN D'ULMA, <strong>VOUS GAGNEZ</strong></h2> 
                         <ul class="b--list-a">
-                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p><strong>Evita riesgos</strong> derivados de la obsolescencia tecnológica</p></li> 
-                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p><strong>Pon al día tus conocimientos</strong> sobre instralogística avanzada</p></li> 
-                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p><strong>Impide paradas</strong> indeseadas del almacén y sus consecuencias en tu organización interna</p></li> 
-                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p><strong>Accede</strong> de forma directa a un <strong>plan de contingencias</strong></p></li> 
-                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p><strong>Reduce tiempos</strong> de instalación</p></li> 
+                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p><strong>Évitez les risques</strong> liés à l'obsolescence technologique</p></li> 
+                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p><strong>Mettez à jour vos connaissances</strong> sur l'intralogistique avancée</p></li> 
+                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p><strong>Prévenez les arrêts</strong> d'entrepôt non désirés et leurs conséquences sur votre organisation interne</p></li> 
+                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p><strong>Accédez</strong> directement à un plan de contingences</p></li> 
+                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p><strong>Réduisez les temps</strong> d'installation</p></li>  
                         </ul>
                     </div>
                 </div>
@@ -94,10 +94,10 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="b--card-c">
-                            <p class="b--card-c__text f--font-d text-center">ACERCATE AL <strong>PLAN RENVOVE DE ULMA</strong> A TRAVÉS DE ESTE VIDEO</p> 
+                            <p class="b--card-c__text f--font-d text-center"> DÉCOUVREZ LE <strong>RENEWAL PLAN D'ULMA</strong> GRÂCE À CETTE VIDÉO </p> 
                             <video class="b--card-c__media" width="100%" height="100%" controls loop poster="./img/video-poster.png">
-                                <source src="./img/ULMA-PLANRENOVE-ES.mp4" type="video/mp4">
-                                <source src="./img/ULMA-PLANRENOVE-ES.ogg" type="video/ogg">
+                                <source src="./img/ULMA-PLANRENOVE-FR.mp4" type="video/mp4">
+                                <source src="./img/ULMA-PLANRENOVE-FR.ogg" type="video/ogg">
                                 Your browser does not support the video tag.
                             </video>
                         </div>
@@ -109,7 +109,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-10 offset-lg-1 col-12 offset-0">
-                        <h2 class="f--font-b f--color-b f--mb-32 text-center"><strong>UN PLAN RENOVE CON LAS VENTAJAS</strong><br>QUE SÓLO UN LÍDER PUEDE OFRECERTE</h2> 
+                        <h2 class="f--font-b f--color-b f--mb-32 text-center"><strong>UN PLAN DE RÉNOVATION AVEC LES AVANTAGES</strong><br>QUE SEUL UN LEADER PEUT VOUS OFFRIR</h2> 
                     </div>
                     <div class="col-lg-6 offset-lg-3 col-12 offset-0">
                         <img src="./img/placeholder/daifuku.png" alt="">
@@ -128,10 +128,10 @@
                                         <div class="b--card-a__hd__media-wrapper">
                                             <img class="b--card-a__hd__media-wrapper__media" src="./img/simbolo-1.png" alt="">
                                         </div>
-                                        <h4 class="b--card-a__hd__title">PLANIFICACIÓN Y ESCALA DE LA INVERSIÓN</h4>
+                                        <h4 class="b--card-a__hd__title">PLANIFICATION ET ÉCHELLE D’INVERSION</h4>
                                     </div>
                                     <div class="b--card-a__bd">
-                                        <p class="b--card-a__bd__text">Diseñamos un traje a medida acorde a tus necesidades y las de tu instalación.</p>
+                                        <p class="b--card-a__bd__text">Nous concevons une solution sur mesure en fonction de vos besoins et de ceux de votre installation.</p>
                                     </div>
                                 </div>
                             </div>
@@ -141,10 +141,10 @@
                                         <div class="b--card-a__hd__media-wrapper">
                                             <img class="b--card-a__hd__media-wrapper__media" src="./img/simbolo-2.png" alt="">
                                         </div>
-                                        <h4 class="b--card-a__hd__title">ADECUACIÓN A LA NORMATIVA VIGENTE</h4>
+                                        <h4 class="b--card-a__hd__title">ADAPTATION À LA RÉGLEMENTATION EN VIGUEUR</h4>
                                     </div>
                                     <div class="b--card-a__bd">
-                                        <p class="b--card-a__bd__text">Todos los dispositivos cumplen con la normativa europea actual de seguridad y eficiencia energética.</p>
+                                        <p class="b--card-a__bd__text">Tous les appareils sont conformes aux réglementations européennes en vigueur en matière de sécurité et d'efficacité énergétique. </p>
                                     </div>
                                 </div>
                             </div>
@@ -154,10 +154,10 @@
                                         <div class="b--card-a__hd__media-wrapper">
                                             <img class="b--card-a__hd__media-wrapper__media" src="./img/simbolo-3.png" alt="">
                                         </div>
-                                        <h4 class="b--card-a__hd__title">MANTENIBILIDAD Y USABILIDAD DEL TRANSELEVADOR</h4>
+                                        <h4 class="b--card-a__hd__title">MAINTENABILITÉ ET FACILITÉ D’UTILISATION DU TRANSSTOCKEUR</h4>
                                     </div>
                                     <div class="b--card-a__bd">
-                                        <p class="b--card-a__bd__text">Esta nueva tecnología te ayuda en el día día y hace que todo sea más sencillo.</p>
+                                        <p class="b--card-a__bd__text">Cette nouvelle technologie vous aide au quotidien et vous facilite la vie.</p>
                                     </div>
                                 </div>
                             </div>
@@ -171,10 +171,10 @@
                                         <div class="b--card-a__hd__media-wrapper">
                                             <img class="b--card-a__hd__media-wrapper__media" src="./img/simbolo-4.png" alt="">
                                         </div>
-                                        <h4 class="b--card-a__hd__title">ROBUSTEZ Y CALIDAD GARANTIZADA</h4>
+                                        <h4 class="b--card-a__hd__title">ROBUSTESSE ET QUALITÉ GARANTIE</h4>
                                     </div>
                                     <div class="b--card-a__bd">
-                                        <p class="b--card-a__bd__text">Tranquilidad y seguridad para ti y tu instalación. Solo un líder del sector, como DAIFUKU te lo puede proporcionar.</p>
+                                        <p class="b--card-a__bd__text">Tranquillité d'esprit et sécurité pour vous et votre installation. Seul un leader du secteur, tel que DAIFUKU, peut vous l'offrir.</p>
                                     </div>
                                 </div>
                             </div>
@@ -184,10 +184,10 @@
                                         <div class="b--card-a__hd__media-wrapper">
                                             <img class="b--card-a__hd__media-wrapper__media" src="./img/simbolo-5.png" alt="">
                                         </div>
-                                        <h4 class="b--card-a__hd__title">FLEXIBILIDAD E INTEGRACIÓN</h4>
+                                        <h4 class="b--card-a__hd__title">FLEXIBILITÉ ET INTÉGRATION</h4>
                                     </div>
                                     <div class="b--card-a__bd">
-                                        <p class="b--card-a__bd__text">Con el Plan Renove tienes más fácil la implementación de las futuras necesidades de tu instalación.</p>
+                                        <p class="b--card-a__bd__text">Grâce au Plan de Rénovation, il vous est plus facile de mettre en œuvre les besoins futurs de votre installation.</p>
                                     </div>
                                 </div>
                             </div>
@@ -201,7 +201,7 @@
                 <div class="row">
                     <div class="col-12">
                         <a class="b--cta-a" href="https://www.ulmahandling.com/es/servicios" target="_blank">
-                            <h3 class="b--cta-a__text">Soluciones de <strong>ingeniería<br>intralogística</strong> para cada sector</h3> 
+                            <h3 class="b--cta-a__text">Des solutions <strong>d'ingénierie intralogistique</strong><br> pour tous les secteurs</h3>  
                             <img class="b--cta-a__media" src="./img/arrow.png" alt="">
                         </a>
                     </div>
@@ -212,7 +212,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <p class="f--font-d f--color-b text-center">- Si desea más información pongase en contacto con su representante comercial -</p>
+                        <p class="f--font-d f--color-b text-center">- Si vous souhaitez obtenir plus d'informations, veuillez contacter votre représentant commercial -</p>
                     </div>
                 </div>
             </div>
