--- a/en.html
+++ b/en.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ulma Handling Plan Renove</title>
+    <title>Ulma Handling Renewal</title>
     <meta name="description" content="Arizmendi ikastola, hezkuntza kooperatiba euskalduna">
     <meta name="keywords" content="arizmendi, ikastola, hezkuntza, kooperatiba, euskalduna, Arrasate, Aretxabaleta, Eskoriatza">
     <link rel="icon" type="image/x-icon" href="./img/fabicon-ulma.png">
@@ -32,7 +32,7 @@
                 <div class="col-lg-4 col-12">
                     <div class="b--header-a__content">
                         <div class="b--header-a__content__lang">
-                            <p class="b--header-a__content__lang__text"><a href="#">ES</a> · <a href="./en.html">EN</a> · <a href="./fr.html">FR</a> · <a href="#">BR</a></p>
+                            <p class="b--header-a__content__lang__text"><a href="./es.html">ES</a> · <a href="#">EN</a> · <a href="./fr.html">FR</a> · <a href="#">BR</a></p>
                         </div>
                         <div class="b--header-a__content__social">
                             <a class="b--header-a__content__social__link" href="https://www.linkedin.com/company/ulma-handling-systems" target="_blank"><img class="b--header-a__content__social__link__icon" src="./img/social/linkedin.png" alt="LinkedIn"></a> 
@@ -48,8 +48,8 @@
     <main>
         <section class="b--hero-a">
             <video class="b--hero-a__media" width="100%" height="100%" autoplay muted loop>
-                <source src="./img/ULMA-ES.mp4" type="video/mp4">
-                <source src="./img/ULMA-ES.ogg" type="video/ogg">
+                <source src="./img/ULMA-ENG.mp4" type="video/mp4">
+                <source src="./img/ULMA-ENG.ogg" type="video/ogg">
                 Your browser does not support the video tag.
             </video>
         </section>
@@ -57,13 +57,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h1 class="f--font-a text-center f--mb-32">EN ULMA SABEMOS QUÉ HACER <br><span class="f--color-b f--bold">PARA QUE NO TE DETENGAS</span></h1>
+                        <h1 class="f--font-a text-center f--mb-32">AT ULMA WE KNOW WHAT TO DO <br><span class="f--color-b f--bold">SO YOU DON’T HAVE TO STOP</span></h1>
                         
                     </div>
                     <div class="col-lg-8 offset-lg-2  col-12 offset-0 text-center">
-                        <p class="f--font-e f--bold">Miramos alrededor y todo lo que vemos nos recuerda que el mundo no se para. Nuestro reto es que tú tampoco lo hagas.</p> <br>
-                        <p class="f--font-e">El mercado nos pone a prueba continuamente, nos exige responder a plazos cada vez más ajustados y con mayor rapidez y eficacia. Nuestra opción es no quedarnos atrás, mantener el ritmo, no perder el control, avanzar siempre. </p> <br>
-                        <p class="f--font-e"><span class="f--color-b">Con ULMA</span>, empresa experta en soluciones y servicios de intralogística integral, <span class="f--color-b">tienes las herramientas idóneas para lograrlo.</span></p> 
+                        <p class="f--font-e f--bold">We look around and everything we see reminds us that the world doesn’t stop. Our challenge is that you don’t stop either.</p> <br>
+                        <p class="f--font-e">We’re constantly put to the test by the market where we have to meet shorter and shorter deadlines faster and more effectively. Our choice is to not get left behind, keep up the pace, not lose control and always keep moving forward. </p> <br>
+                        <p class="f--font-e"><span class="f--color-b">With ULMA</span>, experts in integral intralogistics services and solutions, <span class="f--color-b">you have the perfect tools to achieve it.</span></p> 
                     </div>
                 </div>
             </div>
@@ -73,17 +73,17 @@
                 <div class="row">
                     <div class="col-lg-6 col-12"> 
                         <div class="b--card-b">
-                            <p>PORQUE EL MUNDO NO SE PARA Y TÚ TAMPOCO, EN ULMA HEMOS DISEÑADO UN SERVICIO EXCLUSIVO QUE TIENE POR <strong>OBJETIVO PROLONGAR LA VIDA ÚTIL DE TU INSTALACIÓN MEDIANTE UN PLAN RENOVE PERSONALIZADO</strong>, QUE GARANTIZA LA RENOVACIÓN PARCIAL O TOTAL DEL TRANSELEVADOR</p>
+                            <p>BECAUSE THE WORLD NEVER STOPS AND NEITHER DO YOU, AT ULMA WE’VE DESIGNED AN EXCLUSIVE SERVICE THAT HAS THE GOAL <strong>OF EXTENDING THE USEFUL LIFE OF YOUR INSTALLATION THROUGH A PERSONALISED RENEWAL PLAN</strong> THAT GUARANTEES THE WHOLE OR PARTIAL REPLACEMENT OF YOUR STACKER CRANE. </p> 
                         </div>
                     </div>
                     <div class="col-lg-5 offset-lg-1  col-12 offset-0">
-                        <h2 class="f--font-c f--color-b">CON EL PLAN RENOVE DE ULMA, <strong>TÚ GANAS</strong></h2> 
+                        <h2 class="f--font-c f--color-b">WITH ULMA’S RENEWAL PLAN, <strong>YOU WIN</strong></h2> 
                         <ul class="b--list-a">
-                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p><strong>Evita riesgos</strong> derivados de la obsolescencia tecnológica</p></li> 
-                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p><strong>Pon al día tus conocimientos</strong> sobre instralogística avanzada</p></li> 
-                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p><strong>Impide paradas</strong> indeseadas del almacén y sus consecuencias en tu organización interna</p></li> 
-                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p><strong>Accede</strong> de forma directa a un <strong>plan de contingencias</strong></p></li> 
-                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p><strong>Reduce tiempos</strong> de instalación</p></li> 
+                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p><strong>Avoid risks</strong> from obsolete technology </p></li> 
+                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p><strong>Update your knowledge</strong> about advanced intralogistics</p></li> 
+                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p><strong>Prevent undesired warehouse stoppages</strong> and their consequences for your internal organisation</p></li> 
+                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p>Get direct <strong>access</strong> to a <strong>contingency plan</strong></p></li> 
+                            <li class="b--list-a__list-item"><img class="b--list-a__list-item__icon" src="./img/check-icon.png" alt=""><p><strong>Shorten</strong> installation <strong>times</strong></p></li>  
                         </ul>
                     </div>
                 </div>
@@ -94,10 +94,10 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="b--card-c">
-                            <p class="b--card-c__text f--font-d text-center">ACERCATE AL <strong>PLAN RENVOVE DE ULMA</strong> A TRAVÉS DE ESTE VIDEO</p> 
+                            <p class="b--card-c__text f--font-d text-center">LEARN ABOUT <strong>ULMA’S RENEWAL PLAN</strong> IN THIS VIDEO</p> 
                             <video class="b--card-c__media" width="100%" height="100%" controls loop poster="./img/video-poster.png">
-                                <source src="./img/ULMA-PLANRENOVE-ES.mp4" type="video/mp4">
-                                <source src="./img/ULMA-PLANRENOVE-ES.ogg" type="video/ogg">
+                                <source src="./img/ULMA-PLANRENOVE-ENG.mp4" type="video/mp4">
+                                <source src="./img/ULMA-PLANRENOVE-ENG.ogg" type="video/ogg">
                                 Your browser does not support the video tag.
                             </video>
                         </div>
@@ -109,7 +109,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-10 offset-lg-1 col-12 offset-0">
-                        <h2 class="f--font-b f--color-b f--mb-32 text-center"><strong>UN PLAN RENOVE CON LAS VENTAJAS</strong><br>QUE SÓLO UN LÍDER PUEDE OFRECERTE</h2> 
+                        <h2 class="f--font-b f--color-b f--mb-32 text-center"><strong>IT’S A RENEWAL PLAN WITH ADVANTAGES</strong><br>THAT ONLY A LEADER CAN GIVE YOU</h2> 
                     </div>
                     <div class="col-lg-6 offset-lg-3 col-12 offset-0">
                         <img src="./img/placeholder/daifuku.png" alt="">
@@ -128,10 +128,10 @@
                                         <div class="b--card-a__hd__media-wrapper">
                                             <img class="b--card-a__hd__media-wrapper__media" src="./img/simbolo-1.png" alt="">
                                         </div>
-                                        <h4 class="b--card-a__hd__title">PLANIFICACIÓN Y ESCALA DE LA INVERSIÓN</h4>
+                                        <h4 class="b--card-a__hd__title">PLANNING AND INVESTMENT SCALE</h4>
                                     </div>
                                     <div class="b--card-a__bd">
-                                        <p class="b--card-a__bd__text">Diseñamos un traje a medida acorde a tus necesidades y las de tu instalación.</p>
+                                        <p class="b--card-a__bd__text">We design tailor made solutions according to your needs and your installation’s requirements.</p>
                                     </div>
                                 </div>
                             </div>
@@ -141,10 +141,10 @@
                                         <div class="b--card-a__hd__media-wrapper">
                                             <img class="b--card-a__hd__media-wrapper__media" src="./img/simbolo-2.png" alt="">
                                         </div>
-                                        <h4 class="b--card-a__hd__title">ADECUACIÓN A LA NORMATIVA VIGENTE</h4>
+                                        <h4 class="b--card-a__hd__title">COMPLIANCE WITH REGULATIONS</h4>
                                     </div>
                                     <div class="b--card-a__bd">
-                                        <p class="b--card-a__bd__text">Todos los dispositivos cumplen con la normativa europea actual de seguridad y eficiencia energética.</p>
+                                        <p class="b--card-a__bd__text">All the devices meet current European standards for safety and energy efficiency.</p>
                                     </div>
                                 </div>
                             </div>
@@ -154,10 +154,10 @@
                                         <div class="b--card-a__hd__media-wrapper">
                                             <img class="b--card-a__hd__media-wrapper__media" src="./img/simbolo-3.png" alt="">
                                         </div>
-                                        <h4 class="b--card-a__hd__title">MANTENIBILIDAD Y USABILIDAD DEL TRANSELEVADOR</h4>
+                                        <h4 class="b--card-a__hd__title">STACKER CRANE MAINTAINABILITY AND USABILITY</h4>
                                     </div>
                                     <div class="b--card-a__bd">
-                                        <p class="b--card-a__bd__text">Esta nueva tecnología te ayuda en el día día y hace que todo sea más sencillo.</p>
+                                        <p class="b--card-a__bd__text">This new technology helps your day to day work and makes everything easier.</p>
                                     </div>
                                 </div>
                             </div>
@@ -171,10 +171,10 @@
                                         <div class="b--card-a__hd__media-wrapper">
                                             <img class="b--card-a__hd__media-wrapper__media" src="./img/simbolo-4.png" alt="">
                                         </div>
-                                        <h4 class="b--card-a__hd__title">ROBUSTEZ Y CALIDAD GARANTIZADA</h4>
+                                        <h4 class="b--card-a__hd__title">GUARANTEED ROBUSTNESS AND QUALITY</h4>
                                     </div>
                                     <div class="b--card-a__bd">
-                                        <p class="b--card-a__bd__text">Tranquilidad y seguridad para ti y tu instalación. Solo un líder del sector, como DAIFUKU te lo puede proporcionar.</p>
+                                        <p class="b--card-a__bd__text">Peace of mind and safety for you and your facilities, only an industry leader like DAIFUKU can give it to you.</p>
                                     </div>
                                 </div>
                             </div>
@@ -184,10 +184,10 @@
                                         <div class="b--card-a__hd__media-wrapper">
                                             <img class="b--card-a__hd__media-wrapper__media" src="./img/simbolo-5.png" alt="">
                                         </div>
-                                        <h4 class="b--card-a__hd__title">FLEXIBILIDAD E INTEGRACIÓN</h4>
+                                        <h4 class="b--card-a__hd__title">FLEXIBILITY AND INTEGRATION</h4>
                                     </div>
                                     <div class="b--card-a__bd">
-                                        <p class="b--card-a__bd__text">Con el Plan Renove tienes más fácil la implementación de las futuras necesidades de tu instalación.</p>
+                                        <p class="b--card-a__bd__text">Implementing future needs for your facilities is easier with the renewal plan.</p>
                                     </div>
                                 </div>
                             </div>
@@ -201,7 +201,7 @@
                 <div class="row">
                     <div class="col-12">
                         <a class="b--cta-a" href="https://www.ulmahandling.com/es/servicios" target="_blank">
-                            <h3 class="b--cta-a__text">Soluciones de <strong>ingeniería<br>intralogística</strong> para cada sector</h3> 
+                            <h3 class="b--cta-a__text"><strong>Intralogistics engineering</strong> solutions <br> for every sector</h3>  
                             <img class="b--cta-a__media" src="./img/arrow.png" alt="">
                         </a>
                     </div>
@@ -212,7 +212,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <p class="f--font-d f--color-b text-center">- Si desea más información pongase en contacto con su representante comercial -</p>
+                        <p class="f--font-d f--color-b text-center">- If you want more information get in touch with us through your sales representative -</p>
                     </div>
                 </div>
             </div>
