link hizkuntza egokian

--- a/fr.html
+++ b/fr.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -200,7 +200,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <a class="b--cta-a" href="https://www.ulmahandling.com/es/servicios" target="_blank">
+                        <a class="b--cta-a" href="https://www.ulmahandling.com/fr/services" target="_blank">
                             <h3 class="b--cta-a__text">Des solutions <strong>d'ingénierie intralogistique</strong><br> pour tous les secteurs</h3>  
                             <img class="b--cta-a__media" src="./img/arrow.png" alt="">
                         </a>
